<resources>
    <string name="app_name">Playlist Market</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="theme">Тема</string>
    <string name="default_theme">По умолчанию</string>
    <string name="default_theme_hint">Будет использована тема, выбранная в системных настройках</string>
    <string name="light_theme">Светлая</string>
    <string name="dark_theme">Темная</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="mail_to_support">Написать в поддержку</string>
    <string name="user_terms">Пользовательское соглашение</string>
    <string name="settings_mailto_subject">Сообщение разработчикам и разработчицам приложения Playlist Market</string>
    <string name="settings_mailto_letter">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="search_refresh_button_title">Обновить</string>
    <string name="search_request_status_text_if_no_results">Ничего не найдено</string>
    <string name="search_request_status_text_if_no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="search_request_status_text_if_server_error">Что-то пошло не так…\nОшибка сервера</string>
    <string name="search_status_please_wait">Поиск…</string>
    <string name="no_data">нет данных</string>
    <string name="no_title">Без названия</string>
    <string name="recent_tracks_list_title">Вы искали</string>
    <string name="clear_history_button">Очистить историю</string>
    <string name="player_track_property_country">Страна</string>
    <string name="player_track_property_style">Жанр</string>
    <string name="player_track_property_release">Год</string>
    <string name="player_track_property_album">Альбом</string>
    <string name="player_track_property_length">Длительность</string>
    <string name="media_library_favorites_list_is_empty">Ваша медиатека пуста</string>
    <string name="media_library_no_any_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="media_library_favorites_tab_title">Избранные треки</string>
    <string name="media_library_playlists_tab_title">Плейлисты</string>
    <string name="media_library_new_playlists_button_title">Новый плейлист</string>
    <string name="title">Название*</string>
    <string name="description">Описание</string>
    <string name="to_create">Создать</string>
    <string name="unsaved_data_will_be_loose">Все несохраненные данные будут потеряны</string>
    <string name="complete">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="do_playlist_creation_complete">Завершить создание плейлиста?</string>
    <string name="not_unique_playlist_title">Плейлист с таким названием уже существует</string>
    <string name="playlist">Плейлист</string>
    <string name="has_been_created">создан</string>
    <string name="track_1">трек</string>
    <string name="tracks_2_3_4">трека</string>
    <string name="tracks_of">треков</string>
    <string name="minute_1">минута</string>
    <string name="minutes_2_3_4">минуты</string>
    <string name="minutes_of">минут</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_already_add">Трек уже добавлен в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист</string>
    <string name="error">Ошибка</string>
    <string name="cant_load_playlist_data">Невозможно загрузить данные</string>
    <string name="no_description">Нет описания</string>
    <string name="playlist_is_empty">Плейлист пуст</string>
    <string name="delete_a_track">Удалить трек</string>
    <string name="warning_delete_a_track">Хотите удалить трек?</string>
    <string name="share">Поделиться</string>
    <string name="modify_info">Редактировать информацию</string>
    <string name="delete_a_playlist">Удалить плейлист</string>
    <string name="warning_delete_a_playlist">Хотите удалить плейлист?</string>
    <string name="to_save">Сохранить</string>
    <string name="to_modify">Редактировать</string>
    <string name="impossible_to_share_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="ok">ОК</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
</resources>