<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".features.setting.presentation.ui.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <TextView
            style="@style/ActionBarTitle"
            android:text="@string/settings" />

    </LinearLayout>

    <LinearLayout style="@style/SettingMenuLine">

        <TextView
            style="@style/SettingMenuTextButton"
            android:text="@string/dark_theme" />

        <Switch
            android:id="@+id/settings_DarkThemeSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <LinearLayout style="@style/SettingMenuLine">

        <TextView
            android:id="@+id/settings_Share"
            style="@style/SettingMenuTextButton"
            android:text="@string/share_app" />

        <ImageView
            style="@style/SettingButtonImage"
            android:src="@drawable/share_icon" />
    </LinearLayout>

    <LinearLayout style="@style/SettingMenuLine">

        <TextView
            android:id="@+id/settings_MailToSupport"
            style="@style/SettingMenuTextButton"
            android:text="@string/mail_to_support" />

        <ImageView
            style="@style/SettingButtonImage"
            android:src="@drawable/support_icon" />
    </LinearLayout>

    <LinearLayout style="@style/SettingMenuLine">

        <TextView
            android:id="@+id/settings_UserTerms"
            style="@style/SettingMenuTextButton"
            android:text="@string/user_terms" />

        <ImageView
            style="@style/SettingButtonImage"
            android:src="@drawable/arrow_forward" />
    </LinearLayout>

</LinearLayout>