<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".features.setting.presentation.ui.ThemeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/setting_menu_titles_indent" />

    <TextView
        style="@style/ActionBarTitle"
        android:layout_marginTop="16dp"
        android:text="@string/theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton style="@style/ThemeRadioButton"
        android:id="@+id/default_theme_radioButton"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"/>

    <RadioButton style="@style/ThemeRadioButton"
        android:id="@+id/light_theme_radioButton"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/default_theme_radioButton"/>

    <RadioButton style="@style/ThemeRadioButton"
        android:id="@+id/dark_theme_radioButton"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/light_theme_radioButton"/>

    <TextView
        android:id="@+id/default_title"
        style="@style/SettingMenuTextButton"
        android:layout_marginTop="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_theme"
        app:layout_constraintStart_toEndOf="@id/default_theme_radioButton"
        app:layout_constraintTop_toTopOf="@id/default_theme_radioButton"
        app:layout_constraintBottom_toBottomOf="@id/default_theme_radioButton"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/default_title"
        app:layout_constraintStart_toStartOf="@id/default_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        android:text="@string/default_theme_hint"/>

    <TextView
        android:id="@+id/ligth_theme_title"
        style="@style/SettingMenuTextButton"
        android:layout_marginTop="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light_theme"
        app:layout_constraintStart_toEndOf="@id/light_theme_radioButton"
        app:layout_constraintTop_toTopOf="@id/light_theme_radioButton"
        app:layout_constraintBottom_toBottomOf="@id/light_theme_radioButton"/>

    <TextView
        android:id="@+id/dark_theme_title"
        style="@style/SettingMenuTextButton"
        android:layout_marginTop="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_theme"
        app:layout_constraintStart_toEndOf="@id/dark_theme_radioButton"
        app:layout_constraintTop_toTopOf="@id/dark_theme_radioButton"
        app:layout_constraintBottom_toBottomOf="@id/dark_theme_radioButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>