<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.playlistCreator.presentation.ui.PlaylistCreatorActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_library_new_playlists_button_title"
        android:textSize="24sp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/theme_hard_text_color"
        app:layout_constraintBaseline_toBottomOf="@id/back_button"
        app:layout_constraintStart_toEndOf="@id/back_button"
        android:layout_margin="20dp" />

    <ImageView style="@style/PlaylistCreatorImagePicker"
        android:id="@+id/place_holder"
        android:padding="64dp"
        app:layout_constraintBottom_toBottomOf="@id/middle_guideline"
        android:background="@drawable/dash_dot_rectangle"
        android:src="@drawable/add_playlist_artwork" />

    <com.google.android.material.imageview.ShapeableImageView
        style="@style/PlaylistCreatorImagePicker"
        android:id="@+id/set_image"
        app:layout_constraintBottom_toBottomOf="@id/middle_guideline"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/PlaylistCreatorImageRoundedSquare" />
   
    <EditText style="@style/PlaylistCreatorEditText"
        android:id="@+id/playlist_title_field"
        android:layout_marginTop="28dp"
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/middle_guideline" />

    <TextView style="@style/PlaylistCreatorEditHeader"
        android:id="@+id/title_field_header"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="@id/playlist_title_field"
        app:layout_constraintTop_toTopOf="@id/playlist_title_field"
        android:visibility="gone"/>

    <TextView style="@style/PlaylistCreatorEditHeader"
        android:id="@+id/unique_title_warning"
        android:text="@string/not_unique_playlist_title"
        android:textColor="@color/red"
        android:layout_marginBottom="4dp"
        app:layout_constraintStart_toStartOf="@id/playlist_title_field"
        app:layout_constraintBottom_toBottomOf="@id/playlist_title_field"
        android:visibility="gone"/>

    <EditText style="@style/PlaylistCreatorEditText"
        android:id="@+id/playlist_description_field"
        android:layout_marginTop="16dp"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@id/playlist_title_field"/>

    <TextView style="@style/PlaylistCreatorEditHeader"
        android:id="@+id/description_field_header"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="@id/playlist_description_field"
        app:layout_constraintTop_toTopOf="@id/playlist_description_field"
        android:visibility="gone"/>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_button"
        android:background="@drawable/button_status_selector"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:textColor = "@color/fill_color"
        android:text="@string/to_create"
        android:textAllCaps = "false"
        android:fontFamily = "@font/ys_display_medium"
        android:textSize = "16sp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>