<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.player.presentation.ui.PlayerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/player_left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/player_layout_left_right_space" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/player_right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/player_layout_left_right_space" />

        <ImageButton
            android:id="@+id/player_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_back" />

        <ImageView
            android:id="@+id/player_artwork"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@id/player_track_name"
            app:layout_constraintEnd_toEndOf="@id/player_right_guideline"
            app:layout_constraintStart_toStartOf="@id/player_left_guideline"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/default_album_image" />

        <TextView
            android:id="@+id/player_track_property_country"
            style="@style/PlayerTrackPropertyTitle"
            android:layout_marginBottom="28dp"
            android:text="@string/player_track_property_country"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/player_track_property_genre"
            style="@style/PlayerTrackPropertyTitle"
            android:text="@string/player_track_property_style"
            app:layout_constraintBottom_toTopOf="@id/player_track_property_country" />

        <TextView
            android:id="@+id/player_track_property_release"
            style="@style/PlayerTrackPropertyTitle"
            android:text="@string/player_track_property_release"
            app:layout_constraintBottom_toTopOf="@id/player_track_property_genre" />

        <TextView
            android:id="@+id/player_track_property_album"
            style="@style/PlayerTrackPropertyTitle"
            android:text="@string/player_track_property_album"
            app:layout_constraintBottom_toTopOf="@id/player_track_property_release" />

        <TextView
            android:id="@+id/player_track_property_length"
            style="@style/PlayerTrackPropertyTitle"
            android:text="@string/player_track_property_length"
            app:layout_constraintBottom_toTopOf="@id/player_track_property_album" />

        <TextView
            android:id="@+id/player_track_value_country"
            style="@style/PlayerTrackPropertyValue"
            app:layout_constraintBottom_toBottomOf="@id/player_track_property_country"
            app:layout_constraintStart_toEndOf="@id/player_track_property_country"
            tools:text="Великобритания" />

        <TextView
            android:id="@+id/player_track_value_genre"
            style="@style/PlayerTrackPropertyValue"
            app:layout_constraintBottom_toBottomOf="@id/player_track_property_genre"
            app:layout_constraintStart_toEndOf="@id/player_track_property_genre"
            tools:text="Rock" />

        <TextView
            android:id="@+id/player_track_value_release"
            style="@style/PlayerTrackPropertyValue"
            app:layout_constraintBottom_toBottomOf="@id/player_track_property_release"
            app:layout_constraintStart_toEndOf="@id/player_track_property_release"
            tools:text="1965" />

        <TextView
            android:id="@+id/player_track_value_album"
            style="@style/PlayerTrackPropertyValue"
            app:layout_constraintBottom_toBottomOf="@id/player_track_property_album"
            app:layout_constraintStart_toEndOf="@id/player_track_property_album"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/player_track_value_length"
            style="@style/PlayerTrackPropertyValue"
            app:layout_constraintBottom_toBottomOf="@id/player_track_property_length"
            app:layout_constraintStart_toEndOf="@id/player_track_property_length"
            tools:text="5:35" />

        <ImageButton
            android:id="@+id/player_play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="68dp"
            android:background="@null"
            android:src="@drawable/player_play_icon"
            app:layout_constraintBottom_toTopOf="@id/player_track_property_length"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/player_progressBar"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:indeterminateTint="@color/search_progressBar_color"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/player_track_timer" />

        <TextView
            android:id="@+id/player_track_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/theme_hard_text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/player_play_button"
            tools:text="0:30" />

        <ImageButton
            android:id="@+id/player_add_to_playlist_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/player_playlist_n_favorites_buttons"
            android:layout_marginTop="@dimen/player_playlist_n_favorites_buttons"
            android:background="@null"
            android:src="@drawable/player_add_to_playlist_available"
            app:layout_constraintStart_toStartOf="@id/player_left_guideline"
            app:layout_constraintTop_toTopOf="@id/player_play_button" />

        <ImageButton
            android:id="@+id/player_add_to_favorites_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/player_playlist_n_favorites_buttons"
            android:layout_marginEnd="@dimen/player_playlist_n_favorites_buttons"
            android:background="@null"
            android:src="@drawable/player_add_to_favorites_available"
            app:layout_constraintEnd_toEndOf="@id/player_right_guideline"
            app:layout_constraintTop_toTopOf="@id/player_play_button" />

        <TextView
            android:id="@+id/player_artist_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/theme_hard_text_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/player_play_button"
            app:layout_constraintEnd_toStartOf="@id/player_right_guideline"
            app:layout_constraintStart_toStartOf="@id/player_left_guideline"
            tools:text="The Beatles" />

        <TextView
            android:id="@+id/player_track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/theme_hard_text_color"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@id/player_artist_name"
            app:layout_constraintEnd_toStartOf="@id/player_right_guideline"
            app:layout_constraintStart_toStartOf="@id/player_left_guideline"
            tools:text="Yesterday (Remastered 2009)" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/player_addButtons_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="player_add_to_playlist_button, player_add_to_favorites_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/player_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/player_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/player_bottom_sheet"
        android:paddingHorizontal="12dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="412dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="19sp"
            android:textColor="@color/theme_hard_text_color"
            android:text="@string/add_to_playlist" />

        <Button
            android:id="@+id/player_bottom_sheet_new_playlist_button"
            style="@style/SearchRefreshButton"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            app:cornerRadius="54dp"
            android:text="@string/media_library_new_playlists_button_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/player_bottom_sheet_playlists_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>